opam-version: "2.0"
maintainer: "reneweb"
authors: ["reneweb"]
homepage: "https://github.com/reneweb/camlix"
bug-reports: "https://github.com/reneweb/camlix/issues"
dev-repo: "git+https://github.com/reneweb/camlix.git"
doc: "https://github.com/reneweb/camlix"
license: "Apache-2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"             {>= "4.10.0"}
  "dune"              {>= "2.0.0"}
  "core"
  "ppx_compare"
  "ppx_jane"
  "alcotest"
]
synopsis: "Simple circuit breaker"
description: "
Camlix is a simple circuit breaker library for ocaml
"